#9561 [FAQ] 데이터 없을때 배경색 일감 수정 진행

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1217,6 +1217,7 @@ table[id="documentDisplay"] td {
  */
 .btn,
 button {
+  height: 2.625rem;
   display: inline-block;
   font-family: inherit;
   font-size: 1rem;
