#9561 [FAQ] 데이터 없을때 배경색

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2103,7 +2103,7 @@ button .icon-plus {
 }
 
 .itsm-container .main .list-body .no-data-found-list {
-  background-color: rgba(230, 232, 235, 0.6);
+  background-color: #EBEBEB;
   pointer-events: none;
 }
 
@@ -2439,7 +2439,7 @@ button .icon-plus {
 }
 
 .board-admin-content-edit .edit-table .tbody .no-data-found-list {
-  background-color: rgba(230, 232, 235, 0.6);
+  background-color: #EBEBEB;
   pointer-events: none;
 }
 
