--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -53,7 +53,7 @@ $layout-header-border:                        0.0625rem solid $line-gray; // 1px
 $list-hover-bg-color:                         $line-gray;
 
 // 리스트 - 데이터 없을때
-$no-data-found-list-bg:                       rgba(230, 232, 235, 0.6);
+$no-data-found-list-bg:                       $line-gray;
 
 // 리스트 - 선택시
 $list-active-font-color:                      $dark-blue;
