#9632 [단위 테스트 - 커스텀 코드] 데이터가 없습니다 문구 정렬
- tr style 속성 추가

--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -89,7 +89,7 @@
                                 </thead>
                                 <tbody id="boardCategoryList">
                                     <tr class="no-data-found-list" th:if="${#arrays.isEmpty(boardAdmin?.categoryList)}">
-                                        <td colspan="5" th:text="#{common.msg.noData}"></td>
+                                        <td style="width:100%" colspan="5" th:text="#{common.msg.noData}"></td>
                                     </tr>
                                     <tr th:each="category: ${boardAdmin?.categoryList}">
                                         <td class="col-6" th:text="${category.boardCategoryName}"></td>
