--- a/src/main/resources/public/template/user/departmentPopUp.html
+++ b/src/main/resources/public/template/user/departmentPopUp.html
@@ -9,7 +9,7 @@
     <h1 style="text-align: left;" th:text="#{department.label.deptList}"></h1>
     <div class="container">
         <tr th:if="${#arrays.isEmpty(departmentList)}">
-            <td th:text="#{common.msg.noData}"></td>
+            <td style="width:100%" th:text="#{common.msg.noData}"></td>
         </tr>
         <ul th:each="department : ${departmentList}">
             <li th:id="${department.code}" th:text="${department.codeValue}" th:value="${department.code}"
