--- a/src/main/resources/public/template/portal/download/downloadList.html
+++ b/src/main/resources/public/template/portal/download/downloadList.html
@@ -16,7 +16,7 @@
     <tbody class="list-body">
     <input type="hidden" id="totalCount" name="totalCount" th:value="${downloadCount}"/>
     <tr class="no-data-found-list" th:if="${#arrays.isEmpty(downloadList)}">
-        <td colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
+        <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
     <tr th:each="download : ${downloadList}">
         <td style="width:5%;" class="align-center" th:text="|${download.downloadSeq}|"></td>
