--- a/src/main/resources/public/template/portal/notice/noticeList.html
+++ b/src/main/resources/public/template/portal/notice/noticeList.html
@@ -13,7 +13,7 @@
     <tbody class="list-body">
     <input th:type="hidden" id="totalCount" name="totalCount" th:value="${noticeCount}"/>
     <tr class="no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
-        <td colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
+        <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
     <tr class="tr-notice" th:each="topNotice, i: ${topNoticeList}"
         th:if="not ${#arrays.isEmpty(noticeList)} and ${i.count} < 4">
