--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -28,7 +28,7 @@
 </th:block>
 <th:block layout:fragment="aside">
     <div class="aside">
-        <div class="role-edit flex-column">
+        <div class="role-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-column">
                     <label th:text="#{role.label.id}" class="required"></label>
@@ -89,13 +89,15 @@
                 </div>
             </div>
         </div>
-        <div class="btn-list">
-            <button type="button" class="point-fill" sec:authorize="hasAuthority('role.create')" id="btnRegist" name="btnRegist"
-                    th:onclick="|javascript:onSave('post')|" th:text="#{common.btn.register}"></button>
-            <button type="button" class="point-fill" sec:authorize="hasAuthority('role.update')" id="btnUpdate" name="btnUpdate"
-                    th:onclick="|javascript:onSave('put')|" th:text="#{common.btn.modify}"></button>
-            <button type="button" class="point-fill" sec:authorize="hasAuthority('role.delete')" id="btnDelete" name="btnDelete"
-                    th:onclick="|javascript:aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), onDelete)|" th:text="#{common.btn.delete}"></button>
+        <div class="flex-row justify-content-end">
+            <div class="btn-list">
+                <button type="button" class="point-fill" sec:authorize="hasAuthority('role.create')" id="btnRegist" name="btnRegist"
+                        th:onclick="|javascript:onSave('post')|" th:text="#{common.btn.register}"></button>
+                <button type="button" class="point-fill" sec:authorize="hasAuthority('role.update')" id="btnUpdate" name="btnUpdate"
+                        th:onclick="|javascript:onSave('put')|" th:text="#{common.btn.modify}"></button>
+                <button type="button" class="point-fill" sec:authorize="hasAuthority('role.delete')" id="btnDelete" name="btnDelete"
+                        th:onclick="|javascript:aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), onDelete)|" th:text="#{common.btn.delete}"></button>
+            </div>
         </div>
     </div>
 </th:block>
@@ -162,7 +164,7 @@
             });
 
             OverlayScrollbars(document.querySelector('.list-body'), { className: 'scrollbar' });
-            OverlayScrollbars(document.querySelector('.role-edit'), { className: 'scrollbar' });
+            OverlayScrollbars(document.querySelector('.role-content-edit'), { className: 'scrollbar' });
             Array.prototype.forEach.call(document.querySelectorAll('.checkbox-list'), function(target) {
                 OverlayScrollbars(target, { className: 'inner-scrollbar' });
             });
