--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -22,7 +22,7 @@
                 <h3 class="sub-title under-bar bold" th:text="#{user.label.profile}"></h3>
             </div>
             <div class="flex-column edit-row">
-                <div class="flex-row user-align-item">
+                <div class="flex-row">
                     <div class="edit-column col-6">
                         <div class="flex-column edit-row" th:style="${users?.userKey != null && !users?.platform.equals('user.platform.alice')} ? 'display: none' : ''">
                             <label for="userId">
