포탈 오류 수정
#9712 [단위테스트 - 포탈] 포탈 FAQ에서 카테고리별 조회가 되지 않는다. 외 3건
- 포탈 FAQ는 페이징 없이 전체 리스트를 가져오도록 했습니다.
#9713 [단위테스트 - 포탈] 포탈 메인에서 공지사항/FAQ 내용을 클릭시 이동을 하지 못한다.
- 공지사항은 url 오류, faq는 #9712일감과 관련 되었습니다.
#9709 [단위테스트 - 포탈] 포탈 메인검색 시 스크롤 데이터 디자인이 다르다.
- 페이징 할때 스타일이 미적용 되었습니다.
#9706 [단위테스트 - 포탈] 지원하지 않는 브라우저 안내 기능이 작동하지 않는다.
- url 오류 였습니다.

--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -231,21 +231,21 @@
             divContentBox.className = 'item-box';
 
             let divTitle = document.createElement('h5');
-            divTitle.className = "item-title text-ellipsis";
+            divTitle.className = "item-title underline text-ellipsis";
             let aTitle = document.createElement('a');
             if (data.tableName === 'notice') {
                 aTitle.href = '/portals/notices/' + data.portalId + '/view';
             } else if (data.tableName === 'faq') {
-                aTitle.href = '/portals/faqs?id=' + data.portalId+ '/view';
+                aTitle.href = '/portals/faqs/' + data.portalId+ '/view';
             } else if (data.tableName === 'download') {
-                aTitle.href = '/portal/downloads/'+ data.portalId +'/view';
+                aTitle.href = '/portals/downloads/'+ data.portalId +'/view';
             }
             aTitle.innerText = data.portalTitle;
             divTitle.appendChild(aTitle);
             divContentBox.appendChild(divTitle);
 
             let divContent = document.createElement('div');
-            divContent.className = "item-content text-ellipsis";
+            divContent.className = "text-ellipsis";
             if (data.tableName === 'download') {
                 divContent.innerText = i18n.msg(''+data.portalContent+'');
             } else {
