--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -54,7 +54,8 @@
                 </div>
                 <div class="edit-row flex-column">
                     <label class="form-title" th:text="#{code.label.seqNum}" for="txtSeqNum"></label>
-                    <input id="txtSeqNum" name="txtSeqNum" type="text" th:value="${codeDetail?.seqNum}" maxlength="5"/>
+                    <input id="txtSeqNum" name="txtSeqNum" type="text" th:value="${codeDetail?.seqNum}"
+                           onkeydown="return onlyNumber(event)" onkeyup="removeChar(event)" maxlength="5"/>
                 </div>
                 <div class="edit-row flex-column">
                     <label class="form-title" th:text="#{code.label.description}" for="txtCodeDesc"></label>
@@ -185,6 +186,23 @@
                 }
             });
         });
+
+        function onlyNumber(event) {
+            event = event || window.event;
+            const keyID = (event.which) ? event.which : event.keyCode;
+            if (!((keyID >= 48 && keyID <= 57) || (keyID >= 96 && keyID <= 105)
+                || keyID === 8 || keyID === 9 || keyID === 46 || keyID === 37 || keyID === 39)) {
+                return false;
+            }
+        }
+
+        function removeChar(event) {
+            event = event || window.event;
+            const keyID = (event.which) ? event.which : event.keyCode;
+            if (!(keyID === 8 || keyID === 9 || keyID === 46 || keyID === 37 || keyID === 39)) {
+                event.target.value = event.target.value.replace(/[^0-9]/g, '');
+            }
+        }
 
         /** create **/
         function onCreate() {
