# 문서함 오류 조치
* 9693 [단위 테스트 - 문서함] 문서함 목록 신청서 목록 리스트가 나오지 않는다.
- 검색조건에서 신청서가 나올 수 있도록 조치
* 9696 [단위 테스트 - 문서함] 스크롤 디자인 오류
- 디자인 수정

--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -166,7 +166,7 @@
             divDocumentColor.style.backgroundColor = data.documentColor;
 
             let divDocumentRow = document.createElement('div');
-            divDocumentRow.className = 'document-row flex-row justify-content-between';
+            divDocumentRow.className = 'document-row flex-fill flex-row justify-content-between';
 
             let divDocumentRowContent = document.createElement('div');
             divDocumentRowContent.className = 'document-row-content';
@@ -195,7 +195,7 @@
             divDocumentRowInfo.className = 'document-row-info';
 
             let divDocumentDetail = document.createElement('div');
-            divDocumentDetail.className = 'document-detail flex-row align-items-center';
+            divDocumentDetail.className = 'document-detail flex-row align-items-center float-right';
 
             let divDocumentUser = document.createElement('div');
             divDocumentUser.className = 'document-user inline-flex align-items-center justify-content-center';
