#9575 [단위 테스트 - 역할] 검색 오류 일감 수정 진행 #9577 [단위 테스트 - 역할] 검색 maxLength 설정 일감 수정 진행

--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -14,7 +14,7 @@
             <h6 class="description" th:text="#{role.msg.editDescription}"></h6>
         </div>
         <div class="header-search flex-row">
-            <input type="text" class="search col-5 mr-2" id="search" name="search" th:placeholder="#{role.msg.searchPlaceholder}"/>
+            <input type="text" class="search col-5 mr-2" id="search" name="search" maxlength="100" th:placeholder="#{role.msg.searchPlaceholder}"/>
             <span id="totalCount" class="txt-num"></span>
             <div class="ml-auto">
                 <button type="button" class="default-fill" id="btnSearch" name="btnSearch" onclick="onCreate();"
